# crossnet-share

./: .gitignore  2026-文件批办单#3938-(B-26-1261).doc  BUILD.md  CHANGELOG_v1.1.md  CLAUDE.md  CMakeLists.txt  DELIVERY_CHECKLIST.md  GITHUB_ACTIONS_GUIDE.md  INSTALL_DEPENDENCIES.md  PROJECT_OVERVIEW.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  UPLOAD_TO_GITHUB.md  V2_IMPLEMENTATION_PLAN.md  V2_NEW_FEATURES.md  V2_REALISTIC_PLAN.md  V2_STAGE1_COMPLETE.md  V2_USER_GUIDE.md  投诉批办单#C-26-2.docx
.claude/: cloude-code-toolbox-mcp-skills-awareness.md  settings.json
.github/workflows/: build.yml
client/: client.cpp  client.h  client.rc  file_manager.cpp  file_manager.h
client/ui/: main_window.cpp  main_window.h
common/: autostart.cpp  autostart.h  file_utils.cpp  file_utils.h  message.h  protocol.cpp  protocol.h  version.h.in
resources/: create_icons.py
server/: audit_logger.cpp  audit_logger.h  auth_manager.cpp  auth_manager.h  client_handler.cpp  client_handler.h  document_converter.cpp  document_converter.h  file_indexer.cpp  file_indexer.h  file_watcher.cpp  file_watcher.h  main.cpp  server.cpp  server.h  server.rc  user_manager.cpp  user_manager.h  watermark_service.cpp  watermark_service.h  web_browse.html  web_server.cpp  web_server.cpp.bak3  web_server.h
server/ui/: audit_log_dialog.cpp  audit_log_dialog.h  main_window.cpp  main_window.cpp.bak  main_window.h  settings_dialog.cpp  settings_dialog.h  user_management_dialog.cpp  user_management_dialog.h  watermark_settings_dialog.cpp  watermark_settings_dialog.h
